# sleep-time

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CURRENT_STATE.md  KICKOFF.md  LICENSE  README.md  REVIEW.md  SECURITY.md  pubspec.yaml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/workflows/: flutter-ci.yml  release-drafter.yml  release.yml
android/app/: build.gradle.kts
assets/prompts/: personality.md
docs/: PLAY_SUBMISSION.md  QA_STRATEGY.md  SESSION_NOTES_2026-05-17.md  WINDOWS_PACKAGING_AND_SIGNING.md  WINDOWS_RELEASE.md  WINDOWS_THREAT_MODEL.md
installer/windows/: sleep_time.iss
lib/: main.dart
lib/core/: anthropic_retry.dart  anthropic_stream.dart  app_allowlist.dart  capabilities.dart  config.dart  guardian_tools.dart  lockdown_scheduler.dart  memory_service.dart  negotiable_apps.dart  negotiation_engine.dart  permission_gating.dart  poke_service.dart  schedule.dart  (+3 more)
test/: android_lockdown_test.dart  anthropic_request_test.dart  anthropic_retry_test.dart  anthropic_stream_test.dart  config_test.dart  guardian_copy_test.dart  guardian_tools_test.dart  lockdown_scheduler_test.dart  negotiable_apps_test.dart  negotiation_chat_flow_test.dart  negotiation_engine_test.dart  overlay_size_test.dart  permission_gating_test.dart  schedule_audit_test.dart  schedule_guardrails_test.dart  schedule_store_test.dart  schedule_test.dart  secure_key_store_test.dart  widget_test.dart  windows_lockdown_test.dart  windows_unlock_gating_test.dart
windows/: CMakeLists.txt
windows/watchdog/: CMakeLists.txt  watchdog_main.cpp
(+36 files in other folders)
